# Zappy

./: .gitignore  CMakeLists.txt  Makefile  README.md  protocol.h  protocol.txt
common/: protocol.h
common/buffer/: CMakeLists.txt  Makefile  bipbuffer.h  circbuffer.h  sources.mk
common/buffer/src/: create.c  delete.c  discard.c  extract.c  front.c  msg_to_buffer.c  new_line.c  push.c  reserve.c  switch.c  unused.c  used.c
common/list/: CMakeLists.txt  Makefile  list.h  list_item.h  sources.mk
common/list/src/: list_delete.c  list_erase.c  list_extract.c  list_find.c  list_init.c  list_item_delete.c  list_item_init.c  list_pushback.c  list_pushfront.c  list_remove.c
common/socket/: CMakeLists.txt  Makefile  Socket.h  SocketSelector.h  TcpListener.h  TcpPacket.h  TcpSocket.h  sources.mk
common/socket/src/: Socket.c  Sockselector.c  TcpListener.c  TcpSocket.c  accept.c  allocator.c  bind.c  close.c  connect.c  get_local.c  get_remote.c  init.c  listen.c  open.c  packet.c  receive.c  select_add.c  select_ready.c  select_remove.c  select_wait.c  selector_clear.c  send.c  set_address.c
graphics/: Makefile  protocol.txt  sources.mk
graphics/demo/: Makefile  demo_server  sources.mk
graphics/demo/include/: demo.h
graphics/demo/src/: animations.c  init.c  main.c  server.c
graphics/include/: Core.hpp  Exceptions.hpp  Map.hpp  Parser.hpp  UiManager.hpp  protocol.h
graphics/include/network/: IPAddress.hpp  Listener.hpp  NetworkWrapper.hpp  Socket.hpp
graphics/include/package/: Package.hpp  PackageManager.hpp
graphics/include/parser_types/: ParserTypeArguments.hpp  ParserTypePackage.hpp
graphics/include/utl/: Buffer.hpp  CWrapper.hpp  Caster.hpp  Log.hpp  Properties.hpp  TCP.hpp  Timer.hpp
graphics/ressources/: level_order
graphics/src/: Core.cpp  main.cpp
graphics/src/UiManager/: UiManager.cpp
graphics/src/map/: Map.cpp
graphics/src/network/: IPAddress.cpp  Listener.cpp  NetworkWrapper.cpp  Socket.cpp
graphics/src/package/: Package.cpp  PackageManager.cpp
graphics/src/parser_types/: ParseTypeArguments.cpp  ParseTypePackage.cpp
graphics/src/utl/: Buffer.cpp  CWrapper.cpp  Caster.cpp  Log.cpp  TCP.cpp  Timer.cpp
ia_src/: circ_buffer.py  player.py  position.py  search.py  tile.py  zappy.py  zappy_connection.py
ia_src/.cache/v/cache/: lastfailed
ia_src/tests/: test_socks.py  tests_bufs.py  tests_my_ordicts.py
ia_src/tests/.cache/v/cache/: lastfailed
ref/: stats.sh  wrapper.py
server/: CMakeLists.txt  Makefile  sources.mk
server/include/: arguments.h  client.h  commands.h  debug.h  direction.h  frequency.h  graphic.h  incant.h  item_type.h  player.h  pos.h  serverinfo.h  team.h  utils.h
server/include/map/: egg.h  map.h
server/include/protocol/: packet.h  proto_data.h  proto_egg.h  proto_incant.h  proto_player.h
server/src/: main.c
server/src/arguments/: compare.c  getdims.c  getfreq.c  getnbplayer.c  getport.c  getteams.c  parse.c  usage.c
server/src/commands/: command_utils.c  commands.c
server/src/commands/exec/: exec_broadcast.c  exec_command.c  exec_connect_nbr.c  exec_eject.c  exec_fork.c  exec_forward.c  exec_incantation.c  exec_inventory.c  exec_left.c  exec_look.c  exec_look_utils.c  exec_right.c  exec_set.c  exec_take.c
server/src/graphic/: broadcast.c  connect.c  connect_player.c  create_graphic.c  death.c  direction.c  egg.c  player_ressource.c
server/src/graphic/init/: incant.c  init_protocol.c
server/src/inventory/: inventory_utils.c
server/src/map/: create_map.c  egg.c  generate.c
server/src/net/: create_client.c  is_free_client.c  register_graphic.c  register_player.c  verify_clients.c  write_to.c
server/src/player/: death.c  handle_inputs.c  handle_outputs.c  player.c  team.c  update.c  write_to.c
server/src/server/: connect_client.c  deconnect_client.c  frequency.c  read_data.c  server.c  server_loop.c  time.c  try_register.c  update.c
server/src/utils/: concat_strings.c  convert_to_real_pos.c  free_2d_array.c  get_tile_nb_player.c  mstrdup.c  my_str_to_wordtab.c  myalloc.c  nb_len.c  rand_init.c  send_data.c  send_to_players.c  spawn_resource.c
